--- a/modules/marketdata/bogus/pom.xml
+++ b/modules/marketdata/bogus/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>org.marketcetera</groupId>
     <artifactId>marketdata</artifactId>
-    <version>2.4.1</version>
+    <version>2.4.1-SNAPSHOT</version>
   </parent>
   <artifactId>marketdata-bogus</artifactId>
   <packaging>jar</packaging>
