[maven-release-plugin] prepare release 2.4.1

--- a/photon/maven/app/pom.xml
+++ b/photon/maven/app/pom.xml
@@ -7,18 +7,14 @@
   - $License$
   -->
 
-<project
- xmlns="http://maven.apache.org/POM/4.0.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
- xsi:schemaLocation=
- "http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.marketcetera</groupId>
     <artifactId>photon-maven</artifactId>
-    <version>2.4.1-SNAPSHOT</version>
+    <version>2.4.1</version>
   </parent>
   <artifactId>photon-app</artifactId>
   <packaging>pom</packaging>
@@ -45,15 +41,15 @@
         <configuration>
           <tasks>
             <ant antfile="javadoc.xml" target="javadoc">
-              <property name="javadoc.destdir" value="${project.build.directory}/site/apidocs"/>
-              <property name="javadoc.title" value="Marketcetera Photon ${project.version} API"/>
-              <property name="javadoc.version" value="${project.version}"/>
-              <property name="javaee.version" value="${mvn.javaee.version}"/>
-              <property name="javase.version" value="${mvn.javase.version}"/>
-              <property name="m2.repo" value="${user.home}/.m2/repository"/>
-              <property name="photon.target" value="../rcptarget/${mvn.photon.target}"/>
-              <property name="plugins.dir" value="${basedir}/../../plugins"/>
-              <property name="platform.javadoc.link" value="../platform/"/>
+              <property name="javadoc.destdir" value="${project.build.directory}/site/apidocs" />
+              <property name="javadoc.title" value="Marketcetera Photon ${project.version} API" />
+              <property name="javadoc.version" value="${project.version}" />
+              <property name="javaee.version" value="${mvn.javaee.version}" />
+              <property name="javase.version" value="${mvn.javase.version}" />
+              <property name="m2.repo" value="${user.home}/.m2/repository" />
+              <property name="photon.target" value="../rcptarget/${mvn.photon.target}" />
+              <property name="plugins.dir" value="${basedir}/../../plugins" />
+              <property name="platform.javadoc.link" value="../platform/" />
             </ant>
           </tasks>
         </configuration>
