--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   </parent>
   <groupId>org.marketcetera</groupId>
   <artifactId>public-parent</artifactId>
-  <version>2.4.1-SNAPSHOT</version>
+  <version>2.4.1</version>
   <packaging>pom</packaging>
   <name>Marketcetera Public Sources Parent POM</name>
   <description>The root of Marketcetera public sources.</description>
@@ -54,12 +54,12 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>client</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>core</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
@@ -69,12 +69,12 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>orderloader</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>strategyagent</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}.fork</groupId>
@@ -84,67 +84,67 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>marketdata-bogus</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>marketdata-core</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>marketdata-marketcetera</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>marketdata-yahoo</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>marketdata-csv</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>misc</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>strategy</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>util</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>cep-system</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>cep-esper</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>remote-receiver</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>remote-emitter</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>saclient</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <!-- Compile: QuickFIX/J -->
       <dependency>
@@ -619,27 +619,27 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>core</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
         <type>test-jar</type>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>util-test</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>cep-system</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
         <type>test-jar</type>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>client</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
         <type>test-jar</type>
         <scope>test</scope>
       </dependency>
@@ -1059,8 +1059,8 @@
     </pluginRepository>
   </pluginRepositories>
   <scm>
-    <url>http://source.marketcetera.org/root/trunk</url>
-    <connection>scm:svn:http://source.marketcetera.org/root/trunk</connection>
-    <developerConnection>scm:svn:http://source.marketcetera.org/root/trunk</developerConnection>
+    <url>http://source.marketcetera.org/root/tags/2.4.1</url>
+    <connection>scm:svn:http://source.marketcetera.org/root/tags/2.4.1</connection>
+    <developerConnection>scm:svn:http://source.marketcetera.org/root/tags/2.4.1</developerConnection>
   </scm>
 </project>
