--- a/core/pom.xml
+++ b/core/pom.xml
@@ -7,16 +7,14 @@
 - $License$
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.marketcetera</groupId>
     <artifactId>public-parent</artifactId>
-    <version>2.4.1-SNAPSHOT</version>
+    <version>2.4.1</version>
   </parent>
   <artifactId>core</artifactId>
   <packaging>jar</packaging>
@@ -186,12 +184,8 @@
             <phase>package</phase>
             <configuration>
               <tasks>
-                <property
-                    name="targetDirTests"
-                    value="../photon/plugins/org.marketcetera.core.tests/" />
-                <copy
-                    file="target/core-${project.version}-tests.jar"
-                    todir="${targetDirTests}" />
+                <property name="targetDirTests" value="../photon/plugins/org.marketcetera.core.tests/" />
+                <copy file="target/core-${project.version}-tests.jar" todir="${targetDirTests}" />
               </tasks>
             </configuration>
             <goals>
