--- a/modules/marketdata/yahoo/pom.xml
+++ b/modules/marketdata/yahoo/pom.xml
@@ -1,14 +1,14 @@
-<?xml version="1.0"?><project>
+<?xml version="1.0"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <artifactId>marketdata</artifactId>
     <groupId>org.marketcetera</groupId>
-    <version>2.4.1-SNAPSHOT</version>
+    <version>2.4.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.marketcetera</groupId>
   <artifactId>marketdata-yahoo</artifactId>
   <name>marketdata-yahoo</name>
-  <version>2.4.1-SNAPSHOT</version>
+  <version>2.4.1</version>
   <url>http://maven.apache.org</url>
   <dependencies>
     <!-- Compile. -->
