--- a/photon/maven/pom.xml
+++ b/photon/maven/pom.xml
@@ -7,18 +7,14 @@
   - $License$
   -->
 
-<project
- xmlns="http://maven.apache.org/POM/4.0.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
- xsi:schemaLocation=
- "http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.marketcetera</groupId>
     <artifactId>photon</artifactId>
-    <version>2.4.1-SNAPSHOT</version>
+    <version>2.4.1</version>
   </parent>
   <artifactId>photon-maven</artifactId>
   <packaging>pom</packaging>
@@ -41,18 +37,18 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>photon-bundle</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>photon-rcptarget</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
         <type>pom</type>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>photon-test-bundle</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.1</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
