--- a/strategyagent/pom.xml
+++ b/strategyagent/pom.xml
@@ -6,14 +6,12 @@
 - $License$
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.marketcetera</groupId>
     <artifactId>public-parent</artifactId>
-    <version>2.4.1-SNAPSHOT</version>
+    <version>2.4.1</version>
   </parent>
   <artifactId>strategyagent</artifactId>
   <packaging>jar</packaging>
@@ -168,7 +166,7 @@
               <arguments>
                 <argument>-Dorg.marketcetera.appDir=.</argument>
                 <argument>-classpath</argument>
-                <classpath/>
+                <classpath />
                 <argument>org.marketcetera.core.ApplicationContainer</argument>
                 <argument>samples/${language}/inputs/${sampleName}</argument>
               </arguments>
