--- a/core/pom.xml
+++ b/core/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.marketcetera</groupId>
     <artifactId>public-parent</artifactId>
-    <version>2.4.1</version>
+    <version>2.4.2-SNAPSHOT</version>
   </parent>
   <artifactId>core</artifactId>
   <packaging>jar</packaging>
