--- a/modules/marketdata/csv/pom.xml
+++ b/modules/marketdata/csv/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>org.marketcetera</groupId>
     <artifactId>marketdata</artifactId>
-    <version>2.4.1</version>
+    <version>2.4.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>marketdata-csv</artifactId>
   <packaging>jar</packaging>
-  <version>2.4.1</version>
+  <version>2.4.2-SNAPSHOT</version>
 
   <name>marketdata-csv</name>
 
