--- a/orderloader/pom.xml
+++ b/orderloader/pom.xml
@@ -12,7 +12,7 @@
   <parent>
     <groupId>org.marketcetera</groupId>
     <artifactId>public-parent</artifactId>
-    <version>2.4.1</version>
+    <version>2.4.2-SNAPSHOT</version>
   </parent>
   <artifactId>orderloader</artifactId>
   <packaging>jar</packaging>
