--- a/photon/maven/rcptarget/pom.xml
+++ b/photon/maven/rcptarget/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.marketcetera</groupId>
     <artifactId>photon-maven</artifactId>
-    <version>2.4.1</version>
+    <version>2.4.2-SNAPSHOT</version>
   </parent>
   <artifactId>photon-rcptarget</artifactId>
   <packaging>pom</packaging>
