--- a/strategyagent/pom.xml
+++ b/strategyagent/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>org.marketcetera</groupId>
     <artifactId>public-parent</artifactId>
-    <version>2.4.1</version>
+    <version>2.4.2-SNAPSHOT</version>
   </parent>
   <artifactId>strategyagent</artifactId>
   <packaging>jar</packaging>
