--- a/modules/marketdata/marketdata-core/pom.xml
+++ b/modules/marketdata/marketdata-core/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>org.marketcetera</groupId>
     <artifactId>marketdata</artifactId>
-    <version>2.4.2-SNAPSHOT</version>
+    <version>2.4.1</version>
   </parent>
   <groupId>org.marketcetera</groupId>
   <artifactId>marketdata-core</artifactId>
-  <version>2.4.2-SNAPSHOT</version>
+  <version>2.4.1</version>
   <packaging>jar</packaging>
   <licenses>
     <license>
