--- a/modules/remote/receiver/pom.xml
+++ b/modules/remote/receiver/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.marketcetera</groupId>
     <artifactId>remote</artifactId>
-    <version>2.4.2-SNAPSHOT</version>
+    <version>2.4.1</version>
   </parent>
   <artifactId>remote-receiver</artifactId>
   <packaging>jar</packaging>
