--- a/modules/strategy/pom.xml
+++ b/modules/strategy/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.marketcetera</groupId>
     <artifactId>modules</artifactId>
-    <version>2.4.2-SNAPSHOT</version>
+    <version>2.4.1</version>
   </parent>
   <artifactId>strategy</artifactId>
   <packaging>jar</packaging>
