--- a/webui/pom.xml
+++ b/webui/pom.xml
@@ -17,13 +17,20 @@
     <mvn.vaadin.version>7.7.13</mvn.vaadin.version>
   </properties>
   <modules>
-    <!--module>webui-admin</module-->
+    <module>webui-admin</module>
     <module>webui-core</module>
     <!--module>webui-strategyengine</module>
         <module>webui-exsim</module-->
   </modules>
   <dependencyManagement>
     <dependencies>
+      <!-- local compile -->
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>webui-core</artifactId>
+        <version>4.0.0-SNAPSHOT</version>
+      </dependency>
+      <!-- vaadin compile -->
       <dependency>
         <groupId>com.vaadin</groupId>
         <artifactId>vaadin-bom</artifactId>
