--- a/webui/pom.xml
+++ b/webui/pom.xml
@@ -19,8 +19,7 @@
   <modules>
     <module>webui-admin</module>
     <module>webui-core</module>
-    <!--module>webui-strategyengine</module>
-        <module>webui-exsim</module-->
+    <module>webui-package</module>
   </modules>
   <dependencyManagement>
     <dependencies>
@@ -28,6 +27,11 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>webui-core</artifactId>
+        <version>4.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>webui-admin</artifactId>
         <version>4.0.0-SNAPSHOT</version>
       </dependency>
       <!-- vaadin compile -->
