--- a/packages/server-package/pom.xml
+++ b/packages/server-package/pom.xml
@@ -140,11 +140,11 @@
       <artifactId>spring-boot-starter-log4j2</artifactId>
       <scope>runtime</scope>
     </dependency>
-    <dependency>
+    <!-- dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-jetty</artifactId>
       <scope>runtime</scope>
-    </dependency>
+    </dependency-->
     <!-- other runtime -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
