Work on 4.0.x OrderTicket

--- a/packages/server-package/src/test/cmd_exec/conf/application.properties
+++ b/packages/server-package/src/test/cmd_exec/conf/application.properties
@@ -1,7 +1,10 @@
+# Server Web Services Port
+server.port=8999
+#
 #
 # RPC Settings
 #
-metc.rpc.hostname=localhost
+metc.rpc.hostname=0.0.0.0
 metc.rpc.port=8998
 #
 # Client Session (not FIX) Settings
@@ -16,7 +19,7 @@ metc.fix.log.factory.class=quickfix.SLF4JLogFactory
 # FIX acceptor settings
 #
 metc.fix.acceptor.port=21345
-metc.fix.acceptor.host=localhost
+metc.fix.acceptor.host=0.0.0.0
 #
 # initiator global session settings
 #
