--- a/packages/server-package/pom.xml
+++ b/packages/server-package/pom.xml
@@ -118,6 +118,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-actuator</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
     <!-- local runtime -->
     <dependency>
       <groupId>${project.groupId}</groupId>
