Continue work on Order Ticket View

--- a/packages/server-package/src/test/cmd_exec/conf/application.properties
+++ b/packages/server-package/src/test/cmd_exec/conf/application.properties
@@ -47,10 +47,13 @@ fix.session-descriptors[0].sessions[0].description=Exsim initiator 1
 fix.session-descriptors[0].sessions[0].broker-id=exsim1
 fix.session-descriptors[0].sessions[0].host=dare.marketcetera.com
 fix.session-descriptors[0].sessions[0].port=7001
-fix.session-descriptors[0].sessions[0].settings.BeginString=FIX.4.2
-fix.session-descriptors[0].sessions[0].settings.DataDictionary=FIX42.xml
-fix.session-descriptors[0].sessions[0].settings.SenderCompID=MATP-colin
+fix.session-descriptors[0].sessions[0].settings.BeginString=FIXT.1.1
+fix.session-descriptors[0].sessions[0].settings.SenderCompID=MATP-colin2
 fix.session-descriptors[0].sessions[0].settings.TargetCompID=MRKTC-EXCH
+fix.session-descriptors[0].sessions[0].settings.AppDataDictionary=FIX50SP2.xml
+fix.session-descriptors[0].sessions[0].settings.TransportDataDictionary=FIXT11.xml
+fix.session-descriptors[0].sessions[0].settings.DefaultApplVerID=9
+
 #
 # acceptor global session settings
 #
@@ -223,12 +226,12 @@ admin.roles[0].permissions=AddSessionAction,DeleteSessionAction,DisableSessionAc
 admin.roles[1].name=traderRole
 admin.roles[1].description=Trader Role
 admin.roles[1].users=trader
-admin.roles[1].permissions=AddReportAction,ViewBrokerStatusAction,ViewOpenOrdersAction,ViewReportAction,ViewPositionAction,SendOrderAction,ViewUserDataAction,WriteUserDataAction,ReadUserAttributeAction,WriteUserAttributeAction,RequestMarketDataAction,RequestMarketDataAction,RequestMarketDataSnapshotAction
+admin.roles[1].permissions=AddReportAction,ViewBrokerStatusAction,ViewOpenOrdersAction,ViewReportAction,ViewPositionAction,SendOrderAction,ViewUserDataAction,WriteUserDataAction,ReadUserAttributeAction,WriteUserAttributeAction,RequestMarketDataAction,RequestMarketDataAction,RequestMarketDataSnapshotAction,ReadPermissionAction
 #
 admin.roles[2].name=traderAdminRole
 admin.roles[2].description=Trader Admin Role
 admin.roles[2].users=traderAdmin
-admin.roles[2].permissions=ViewBrokerStatusAction,ViewOpenOrdersAction,ViewReportAction,ViewPositionAction,SendOrderAction,ViewUserDataAction,WriteUserDataAction,AddReportAction,DeleteReportAction,ReadUserAttributeAction,WriteUserAttributeAction,RequestMarketDataAction,RequestMarketDataAction,RequestMarketDataSnapshotAction
+admin.roles[2].permissions=ViewBrokerStatusAction,ViewOpenOrdersAction,ViewReportAction,ViewPositionAction,SendOrderAction,ViewUserDataAction,WriteUserDataAction,AddReportAction,DeleteReportAction,ReadUserAttributeAction,WriteUserAttributeAction,RequestMarketDataAction,RequestMarketDataAction,RequestMarketDataSnapshotAction,ReadPermissionAction
 #
 # Supervisor Permissions
 #
