MATP-1027 Create relay market data service

--- a/modules/marketdata/marketdata-core/src/main/resources/marketdata_core_messages.properties
+++ b/modules/marketdata/marketdata-core/src/main/resources/marketdata_core_messages.properties
@@ -19,7 +19,8 @@ event_notification_failed.msg=Unable to publish {0} to {1}
 unable_to_acquire_lock.msg=Unable to acquire the market data update lock
 no_symbols_or_underlying_symbols.msg=Market data requests must specify at least one symbol or underlying symbol
 no_content.msg=Market data requests must specify at lease one content type
-provider_description.msg=Marketdata Core
+manager_provider_description.msg=Market Data Manager
+remote_provider_description.msg=Remote Market Data
 content_requires_quote_events.msg=Events with content type {0} must be quote events. {1} is not a quote event.
 provider_reports_status.msg=Market data provider {0} reports status {1}
 jmx_registration_error.msg=Unable to register/unregister JMX interface for {0} market data provider
