--- a/strategyagent/pom.xml
+++ b/strategyagent/pom.xml
@@ -81,6 +81,11 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>marketdata-bogus</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>cep-system</artifactId>
       <scope>test</scope>
     </dependency>
