--- a/rpc-core/pom.xml
+++ b/rpc-core/pom.xml
@@ -113,6 +113,15 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <disableXmlReport>false</disableXmlReport>
+          <forkCount>1</forkCount>
+          <reuseForks>false</reuseForks>
+          <argLine>${mvn.test.options}</argLine>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
