--- a/cluster/simple-cluster/pom.xml
+++ b/cluster/simple-cluster/pom.xml
@@ -45,6 +45,10 @@
           <groupId>com.vaadin.external.google</groupId>
           <artifactId>android-json</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
   </dependencies>
