--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     <mvn.spring.boot.version>2.0.3.RELEASE</mvn.spring.boot.version>
     <mvn.test.options>-Xmx2048m -Xms128m</mvn.test.options>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss.SSS Z</maven.build.timestamp.format>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -972,7 +973,7 @@
         <!-- mvn compile -->
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.0.2</version>
+          <version>3.7.0</version>
           <configuration>
             <source>1.${mvn.javase.version}</source>
             <target>1.${mvn.javase.version}</target>
@@ -1013,6 +1014,14 @@
       <!-- Place tests into a jar for use during testing of other packages -->
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
+        <version>2.2</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <!-- Adds the build number to each JAR -->
       <plugin>
