--- a/pom.xml
+++ b/pom.xml
@@ -1167,7 +1167,7 @@
     <module>util</module>
     <module>util-test</module>
     <module>tools</module>
-    <module>webui-new</module>
+    <module>webui</module>
   </modules>
   <repositories>
     <repository>
