--- a/webui/pom.xml
+++ b/webui/pom.xml
@@ -41,6 +41,11 @@
 	  </exclusion>
 	</exclusions>
       </dependency>
+      <dependency>
+	<groupId>org.vaadin.addons</groupId>
+	<artifactId>wizards-for-vaadin</artifactId>
+	<version>1.1.1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <modules>
