Change message levels

--- a/photon/plugins/org.marketcetera.photon.notification/src/main/resources/photon_notification_messages.properties
+++ b/photon/plugins/org.marketcetera.photon.notification/src/main/resources/photon_notification_messages.properties
@@ -22,9 +22,10 @@ popup.ellipsis.msg=...
 popup.subject_label.msg=Subject:
 popup.priority_label.msg=Priority:
 popup.timestamp_label.msg=Generated:
-popup.severity_label.HIGH.msg=High
-popup.severity_label.MEDIUM.msg=Medium
-popup.severity_label.LOW.msg=Low
+popup.severity_label.ERROR.msg=Error
+popup.severity_label.WARN.msg=Warn
+popup.severity_label.INFO.msg=Info
+popup.severity_label.DEBUG.msg=Debug
 
 # INFO Log Messages
 notification_console.init.msg=Initializing Notifications Console...
