--- a/photon/plugins/org.marketcetera.photon.notification/src/main/resources/photon_notification_preferences_messages.properties
+++ b/photon/plugins/org.marketcetera.photon.notification/src/main/resources/photon_notification_preferences_messages.properties
@@ -13,9 +13,10 @@
 # do the reverse conversion using the '-reverse' command-line option.
 
 desktop_notifications.priority.msg=Priority
-desktop_notifications.severity_label.HIGH.msg=High
-desktop_notifications.severity_label.MEDIUM.msg=Medium
-desktop_notifications.severity_label.LOW.msg=Low
+desktop_notifications.severity_label.ERROR.msg=Error
+desktop_notifications.severity_label.WARN.msg=Warn
+desktop_notifications.severity_label.INFO.msg=Info
+desktop_notifications.severity_label.DEBUG.msg=Debug
 desktop_notifications.fewest.msg=Fewest Popups
 desktop_notifications.most.msg=Most Popups
 desktop_notifications.parenthetical_pattern.msg={0} ({1})
