--- a/pom.xml
+++ b/pom.xml
@@ -1211,7 +1211,7 @@
     </pluginRepository>
     <pluginRepository>
       <id>internal</id>
-      <url>http://repo.marketcetera.org/maven</url>
+      <url>https://repo.marketcetera.org/maven</url>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
