Port some FIX projects from private

--- a/fix/pom.xml
+++ b/fix/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.marketcetera</groupId>
@@ -10,8 +12,13 @@
   <packaging>pom</packaging>
   <name>Fix Parent</name>
   <modules>
+    <module>fix-acceptor</module>
     <module>fix-api</module>
     <module>fix-core</module>
+    <module>fix-db</module>
+    <module>fix-rpc-client</module>
+    <module>fix-rpc-core</module>
+    <module>fix-rpc-server</module>
     <module>fix-server</module>
   </modules>
 </project>
