--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,31 @@
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
+        <artifactId>fix-rpc-client</artifactId>
+        <version>4.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>fix-rpc-core</artifactId>
+        <version>4.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>fix-acceptor</artifactId>
+        <version>4.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>fix-rpc-server</artifactId>
+        <version>4.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>fix-db</artifactId>
+        <version>4.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
         <artifactId>fix-core</artifactId>
         <version>4.0.0-SNAPSHOT</version>
       </dependency>
@@ -332,6 +357,12 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>trade-rpc-core</artifactId>
+        <version>4.0.0-SNAPSHOT</version>
+      </dependency>
+      <!-- compile: web ui -->
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>webui-admin</artifactId>
         <version>4.0.0-SNAPSHOT</version>
       </dependency>
       <!-- Compile: QuickFIX/J -->
