--- a/webui/webui-package/pom.xml
+++ b/webui/webui-package/pom.xml
@@ -19,6 +19,11 @@
       <artifactId>webui-core</artifactId>
     </dependency>
     <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>webui-admin</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
       <groupId>com.vaadin</groupId>
       <artifactId>vaadin-spring-boot-starter</artifactId>
     </dependency>
