--- a/packages/server-package/pom.xml
+++ b/packages/server-package/pom.xml
@@ -45,6 +45,10 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>fix-rpc-server</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>fix-core</artifactId>
     </dependency>
     <dependency>
