MATP-966 Combine fix-db with fix-server

--- a/fix/fix-acceptor/pom.xml
+++ b/fix/fix-acceptor/pom.xml
@@ -27,7 +27,7 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>fix-db</artifactId>
+      <artifactId>fix-server</artifactId>
     </dependency>
   </dependencies>
 </project>
