--- a/fix/fix-server/src/test/resources/application.properties
+++ b/fix/fix-server/src/test/resources/application.properties
@@ -88,3 +88,16 @@ fix.session-descriptors[1].sessions[1].settings.BeginString=FIX.4.2
 fix.session-descriptors[1].sessions[1].settings.DataDictionary=FIX42.xml
 fix.session-descriptors[1].sessions[1].settings.SenderCompID=TARGET2
 fix.session-descriptors[1].sessions[1].settings.TargetCompID=MATP
+#
+# Database Settings
+#
+spring.datasource.url=jdbc:postgresql://127.0.0.1/metc
+spring.datasource.username=metc
+spring.datasource.password=pw4metc
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.pool-size=30
+spring.jpa.hibernate.use-new-id-generator-mappings=true
+spring.jpa.show-sql=false
+spring.jpa.hibernate.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
