MATP-966 FIX refactor

--- a/admin/admin-rpc-core/pom.xml
+++ b/admin/admin-rpc-core/pom.xml
@@ -25,6 +25,10 @@
       <artifactId>rpc-core</artifactId>
     </dependency>
     <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>cluster-rpc-core</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.google.protobuf</groupId>
       <artifactId>protobuf-java</artifactId>
     </dependency>
