--- a/cluster/pom.xml
+++ b/cluster/pom.xml
@@ -14,6 +14,9 @@
   <modules>
     <module>cluster-api</module>
     <module>cluster-core</module>
+    <module>cluster-rpc-core</module>
+    <module>cluster-rpc-client</module>
+    <module>cluster-rpc-server</module>
     <module>simple-cluster</module>
   </modules>
 </project>
