--- a/fix/fix-rpc-core/pom.xml
+++ b/fix/fix-rpc-core/pom.xml
@@ -22,6 +22,10 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>cluster-rpc-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>rpc-core</artifactId>
     </dependency>
     <dependency>
