--- a/trade/trade-rpc-core/pom.xml
+++ b/trade/trade-rpc-core/pom.xml
@@ -27,11 +27,19 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>fix-rpc-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>rpc-core</artifactId>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>admin-rpc-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>cluster-rpc-core</artifactId>
     </dependency>
     <dependency>
       <groupId>com.google.protobuf</groupId>
