--- a/fix/fix-core/pom.xml
+++ b/fix/fix-core/pom.xml
@@ -27,6 +27,10 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>cluster-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>admin-api</artifactId>
     </dependency>
     <!-- compile spring -->
